# mpv

./: .gitignore  CMakeLists.txt  Makefile  cfg-mplayer.h  command.c  config.h.in  configure  mp_core.h  mp_msg.c  mp_msg.h  mplayer.c  path.c  path.h
DOCS/: crosscompile-cmake.rst
DOCS/man/en/: ao.rst  options.rst  vf.rst  vo.rst
TOOLS/: bench.pl  dither_matrix.c  mplayer2_identify.sh
audio/: audio.c  audio.h  chmap.c  chmap.h
audio/decode/: ad.c  ad_hwac3.c
audio/filter/: af_hrtf.c  af_lavcac3enc.c  af_pan.c
cmake/: FindCocoa.cmake  FindCoreVideo.cmake  FindIconv.cmake  FindLADSPA.cmake  FindLircClient.cmake  FindMNG.cmake  FindOSS.cmake  FindPkgMacros.cmake
cmake/mpv/: CompilerInfo.cmake  OsDep.cmake  PlatformChecks.cmake  PreprocessFiles.cmake  Utils.cmake  Version.cmake
core/: cfg-mplayer.h  command.c  defaultopts.c  m_option.c  mp_common.c  mp_common.h  mp_core.h  mp_msg.c  mp_osd.h  mplayer.c  options.h  parser-mpcmd.c  screenshot.c
core/input/: input.c  input.h
demux/: demux.c  demux.h  demux_lavf.c  demux_ts.c  ebml.c  ebml.h
etc/: input.conf
input/: input.c
libaf/: af_export.c
libmpdemux/: video.c
libvo/: bitmap_packer.c  video_out.c  video_out.h  vo_gl3.c
options/: m_option.c  options.c
osdep/: configpath-osx.c  configpath-win.c  configpath-xdg.c  configpath.h  getch2.c  macosx_application.h  macosx_application.m  macosx_finder_args.m  timer-linux.c
player/: command.c  loadfile.c
stream/: ai_oss.c  cache2.c  stream_bluray.c  stream_cddb.c  stream_dvb.c  stream_radio.c
sub/: ass_mp.c  dec_sub.c  dec_sub.h  find_subfiles.c  img_convert.c  osd_libass.c  sd.h  sd_ass.c  sd_lavc.c  sd_spu.c  sub.c  sub.h
video/filter/: vf.c  vf_lua.c  vf_lua_lib.lua  vf_scale.c
